fix z-index on stayput header

--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -129,7 +129,7 @@ h1, h2, h3 {
   margin: auto;
   width: 1170px;
   background-color: #fafafa;
-  z-index: 1070;
+  z-index: 1040;
   padding-top: 20px;
 
 }
